--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 5",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day5/bin/Debug/net7.0/Day5.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day5",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
