--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -93,6 +93,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 9",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day9/bin/Debug/net7.0/Day9.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day9",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
