--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -115,6 +115,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 11",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day11/bin/Debug/net7.0/Day11.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day11",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
