--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -126,6 +126,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 12",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day12/bin/Debug/net7.0/Day12.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day12",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
