--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -159,6 +159,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 15",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day15/bin/Debug/net7.0/Day15.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day15",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
