Day 19. Initial commit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -203,6 +203,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 19",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day19/bin/Debug/net7.0/Day19.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day19",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
