--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -214,6 +214,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 20",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day20/bin/Debug/net7.0/Day20.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day20",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
