Add Day 24 placeholder

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -258,6 +258,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 24",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day24/bin/Debug/net7.0/Day24.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day24",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
