--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -269,6 +269,17 @@
             "stopAtEntry": false
         },
         {
+            "name": "Day 25",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/Day25/bin/Debug/net7.0/Day25.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Day25",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
             "name": ".NET Core Attach",
             "type": "coreclr",
             "request": "attach"
